import { ReactIntegration } from "./ReactIntegration";
import { ServiceLayer } from "../services/ServiceLayer";
import { createElement } from "react";
import { beforeEach, expect, it } from "vitest";
import { usePropertiesInternal, useServiceInternal } from "./hooks";
import { createCustomElement } from "../CustomElement";
import { Service } from "../Service";
// eslint-disable-next-line import/no-relative-packages
import { UI as TestUI } from "./test-data/test-package/UI";
import { renderComponentShadowDOM } from "@open-pioneer/test-utils/web-components";
import { act } from "@testing-library/react";

export interface TestProvider {
    value: string;
}

beforeEach(() => {
    document.body.innerHTML = "";
});

it("should allow access to service via react hook", async () => {
    function TestComponent() {
        const service = useServiceInternal("test", "test.Provider") as TestProvider;
        return createElement("span", undefined, `Hello ${service.value}`);
    }
    const elem = createCustomElement({
        component: (props) =>
            createElement("div", { id: "wrapper" }, createElement(TestComponent, props)),
        openShadowRoot: true,
        packages: {
            test: {
                name: "test",
                services: {
                    Provider: {
                        name: "Provider",
                        clazz: class Provider implements Service<TestProvider> {
                            value = "TEST";
                        },
                        provides: [
                            {
                                name: "test.Provider"
                            }
                        ]
                    }
                },
                ui: {
                    references: ["test.Provider"]
                }
            }
        }
    });

    const { queries } = await renderComponentShadowDOM(elem, {
        innerContainerSelector: "#wrapper"
    });
    const node = await queries.findByText("Hello TEST");
    expect(node).toMatchSnapshot();
});

it("should get error while use undefined service", async () => {
    function TestComponent() {
        const service = useServiceInternal("test", "test.Provider") as TestProvider;
        return createElement("span", undefined, `Hello ${service.value}`);
    }
    const wrapper = document.createElement("div");
    const serviceLayer = new ServiceLayer([]);
    const reactIntegration = new ReactIntegration({
        rootNode: wrapper,
        container: wrapper,
        serviceLayer,
        packages: new Map()
    });
    serviceLayer.start();

    expect(() => {
        act(() => {
            reactIntegration.render(TestComponent, {});
        });
    }).toThrowErrorMatchingSnapshot();
});

it("should be able to read properties from react component", async function () {
    function TestComponent() {
        const properties = usePropertiesInternal("test");
        return createElement("span", undefined, `Hello ${properties.name}`);
    }

    const elem = createCustomElement({
        component: (props) =>
            createElement("div", { id: "wrapper" }, createElement(TestComponent, props)),
        openShadowRoot: true,
        packages: {
            test: {
                name: "test",
                properties: {
                    name: {
                        value: "USER"
                    }
                }
            }
        }
    });


    const { queries } = await renderComponentShadowDOM(elem, {
        innerContainerSelector: "#wrapper"
    });
    const node = await queries.findByText("Hello USER");
    expect(node).toMatchSnapshot();
});

it("should get error when requesting properties from an unknown package2", async () => {
    const wrapper = document.createElement("div");
    const serviceLayer = new ServiceLayer([]);
    const reactIntegration = new ReactIntegration({
        rootNode: wrapper,
        container: wrapper,
        serviceLayer,
        packages: new Map()
    });
   
    function TestComponent() {
        const properties = usePropertiesInternal("test");
        return createElement("span", undefined, `Hello ${properties.name}`);
    }

    serviceLayer.start();

    expect(() => {
        act(() => {
            reactIntegration.render(TestComponent, {});
        });
    }).toThrowErrorMatchingSnapshot();
});

it("should provide the autogenerated useProperties hook", async () => {
    const testPackageName = "@open-pioneer/runtime__react_test_package";
    const elem = createCustomElement({
        component: TestUI,
        openShadowRoot: true,
        packages: {
            [testPackageName]: {
                name: testPackageName,
                properties: {
                    greeting: {
                        value: "Hello World!"
                    }
                }
            }
        }
    });

    const { queries } = await renderComponentShadowDOM(elem, {
        innerContainerSelector: ".ui"
    });
    const node = await queries.findByText("Hello World!");
    expect(node).toMatchSnapshot();
});
