// Vitest Snapshot v1

exports[`should allow access to service via react hook 1`] = `
<span>
  Hello TEST
</span>
`;

exports[`should be able to read properties from react component 1`] = `
<span>
  Hello USER
</span>
`;

exports[`should get error when requesting properties from an unknown package 1`] = `"runtime:internal-error: Package 'test' was not found in application."`;

exports[`should get error when requesting properties from an unknown package2 1`] = `"runtime:internal-error: Package 'test' was not found in application."`;

exports[`should get error while use undefined service 1`] = `"runtime:interface-not-found: The UI of package 'test' requested the unimplemented interface 'test.Provider'."`;

exports[`should provide the autogenerated useProperties hook 1`] = `
<div
  class="ui"
>
  Hello World!
</div>
`;

exports[`should render component and using service which manipulates dom 1`] = `
<div
  class="div-test"
>
  Hallo Test
</div>
`;
